# CarService

./: CMakeLists.txt  README.md  main.cpp
Entities/car/: BodyType.h  Car.cpp  Car.h  Transmission.h
Entities/client/: Client.cpp  Client.h
Entities/order/: Order.cpp  Order.h
Entities/person/: Person.cpp  Person.h
Services/car/: CarService.cpp  CarService.h
Services/client/: ClientService.cpp  ClientService.h
Services/order/: OrderService.cpp  OrderService.h
Services/path/: PathService.cpp
Services/search/: SearchService.cpp  SearchService.h
UI/cars/: carcatalogpage.cpp  carcatalogpage.h  filterdialog.cpp  filterdialog.ui
UI/cars/add/: qaddcardialog.cpp  qaddcardialog.h
UI/cars/catalog/: carcatalogpage.cpp  carcatalogpage.h
UI/cars/edit/: qeditcardialog.cpp  qeditcardialog.ui
UI/cars/reservationDialog/: qcarreservationdialog.cpp  qcarreservationdialog.h
UI/diagram/: transmissionchart.cpp  transmissionchart.h
UI/orders/: orderpage.cpp  orderpage.h  orderspage.cpp  orderspage.h  orderspage.ui
UI/static/header/: headerwidget.cpp  headerwidget.h
database/: car_logo_paths.txt  cars.txt  clients.txt  orders.txt
mapper/car/: CarMapper.cpp  CarMapper.h
mapper/order/: OrderMapper.cpp  OrderMapper.h
serializers/car/: CarSerializer.cpp  CarSerializer.h
serializers/client/: ClientMapper.cpp  ClientMapper.h
serializers/order/: OrderMapper.cpp  OrderMapper.h
serializers/path/: PathMapper.h
src/: main.cpp
src/Entities/car/: BodyType.h  Car.cpp
src/Entities/client/: Client.h
src/Entities/order/: Order.cpp  Order.h
src/Services/car/: CarService.cpp  CarService.h
src/Services/order/: OrderService.cpp  OrderService.h
src/Services/path/: PathService.h
src/Services/search/: SearchService.cpp
src/UI/cars/: filterdialog.cpp  filterdialog.h
src/UI/cars/add/: qaddcardialog.cpp  qaddcardialog.h  qaddcardialog.ui
src/UI/cars/catalog/: carcatalogpage.cpp  carcatalogpage.ui
src/UI/cars/edit/: qeditcardialog.h
src/UI/cars/reservationDialog/: qcarreservationdialog.h  qcarreservationdialog.ui
src/UI/diagram/: transmissionchart.cpp  transmissionchart.h  transmissionchart.ui
src/UI/orders/: orderpage.cpp  orderpage.h  orderpage.ui
src/UI/static/header/: headerwidget.ui
src/database/: cars.txt  clients.txt  orders.txt
src/serializers/car/: CarSerializer.cpp
src/serializers/client/: ClientMapper.h
src/serializers/path/: PathMapper.cpp
src/utils/: TimeHelper.h
test/: CarServiceTest.cpp  CarServiceTest.h  MockCarSerializer.h  testMain.cpp
utils/: TimeHelper.cpp  TimeHelper.h
